--- a/apps/mfe3/src/app/booking/booking.component.html
+++ b/apps/mfe3/src/app/booking/booking.component.html
@@ -1,13 +1,15 @@
 <div class="container">
-  <span>Booking</span>
+  <div class="header">
+    <span>Booking</span>
+  </div>
   <div class="form">
     <div class="field">
-      <label>Flight number:</label>
-      <input/>
+      <label for="number">Flight number:</label>
+      <input id="number"/>
     </div>
     <div class="field">
-      <label>Passenger name:</label>
-      <input/>
+      <label for="name">Passenger name:</label>
+      <input id="name"/>
     </div>
   </div>
 </div>
