--- a/apps/mfe2/src/app/flights/flights.component.scss
+++ b/apps/mfe2/src/app/flights/flights.component.scss
@@ -2,12 +2,22 @@
   .header {
     display: flex;
     align-items: center;
-    margin: 10px 0;
+    margin: 30px 0 0 0;
+    width: 100%;
+    border-bottom: 2px solid lightgray;
+    padding: 10px 0;
+    justify-content: space-between;
 
     .user {
       margin-left: 20px;
       font-size: 20px;
       font-family: sans-serif;
+      display: flex;
+      align-items: center;
+
+      h5 {
+        margin-right: 5px;
+      }
     }
   }
   span {
@@ -17,7 +27,8 @@
   }
   table {
     width: 35%;
-    tr.header {
+    margin-top: 20px;
+    .table-header {
       td {
         font-size: 20px;
         font-weight: bold;
@@ -28,6 +39,9 @@
       td {
         font-family: sans-serif;
       }
+    }
+    @media screen and (max-width: 760px) {
+      width: 100%;
     }
   }
 }
