--- a/apps/mfe3/src/app/booking/booking.component.scss
+++ b/apps/mfe3/src/app/booking/booking.component.scss
@@ -1,13 +1,24 @@
 .container {
-  span {
-    font-size: 40px;
-    font-family: sans-serif;
-    color: red;
+  .header {
+    display: flex;
+    align-items: center;
+    margin: 30px 0 0 0;
+    width: 100%;
+    border-bottom: 2px solid lightgray;
+    padding: 10px 0;
+    justify-content: space-between;
+
+    span {
+      font-size: 40px;
+      font-family: sans-serif;
+      color: red;
+    }
   }
   .form {
     display: flex;
     flex-direction: column;
     width: 25%;
+    margin-top: 20px;
 
     .field {
       display: flex;
@@ -17,6 +28,7 @@
       label {
         font-size: 20px;
         font-weight: bold;
+        font-family: sans-serif;
       }
       input {
         margin-left: 20px;
@@ -24,6 +36,9 @@
         width: 200px;
         height: 15px;
       }
+    }
+    @media screen and (max-width: 760px) {
+      width: 100%;
     }
   }
 }
