--- a/apps/shell2/src/app/home/home.component.html
+++ b/apps/shell2/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>Welcome to MFE project!</p>
+<div class="container">
+  <div class="header">Welcome to the Micro Frontends project!</div>
+</div>
